HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelCancelOptionType/Expected.uv
//! Expected diagnostic metadata for the ParallelCancelOptionType rejected-source specimen.

expectedDiagnostic("E-CON-0103", "requirement.20.ParallelCancelOptionType")
